# libdxf

./: .gitignore  .travis.yml  AUTHORS  BUGS  CODE_OF_CONDUCT  CODE_OF_CONDUCT.md  CONTRIBUTING  ChangeLog  DEPENDENCIES  DEPENDENCIES.md  HACKING  INSTALL  ISSUES  ISSUES.md  ISSUE_TEMPLATE  MANIFEST  Makefile.am  Makefile.win  PULL_REQUEST_TEMPLATE  README  TODO  autogen.sh  circle.yml  configure.ac  index.html
doc/: .gitignore  ACADVER.html  AUTHORS.md  BUGS.md  CONTRIBUTING.md  DEPENDENCIES.md  Drawing_Interchange_and_File_Formats_Release_12.txt  ISSUES.md  MANIFEST  Makefile.am  PULL_REQUEST_TEMPLATE.md  README.md  TODO  binary.html  class.html  entities.html  hatch.html  image.html  index.html  libDXF-dox-no-call-graphs.dox  libDXF-dox-with-call-graphs.dox  libDXF.dox  libdxf-main.txt  libdxf_blocks.html  libdxf_classes.html  libdxf_entities.html  libdxf_header.html  libdxf_info.html  libdxf_list.html  libdxf_main.html  libdxf_objects.html  libdxf_tables.html  libdxf_thumbnailimage.html  objects.html  table.html  table_entries.html  time.html  type.html  what-is-libDXF.html
doc/doxygen/: .gitignore  Makefile.am  create_libdxf_dox.sh  hatch.html  libDXF.dox  libdxf-main.txt
doc/doxygen/drakon/: README.md
doc/header/: 3DDWFPREC.html  ACADVER.html  DGNFRAME.html  DIMALTTZ.html  DIMALTU.html  DIMALTZ.html  DWFFRAME.html  DWGCODEPAGE.html  LASTSAVEDBY.html  PDMODE.html
doc/refguides/: Makefile.am
doc/refguides/R10/: DXF_R10.xml  Makefile  Makefile.am
doc/refguides/R12/: .gitignore  DXF_R12.xml  Makefile.am
doc/refguides/R13/: DXF_R13.xml  Makefile.am
doc/refguides/R14/: DXF_R14.xml  Makefile.am
doc/refguides/R2014/: Makefile.am  R2014.xml
examples/: all_R10_entities.dxf  blender-monkey_head_example_R12.dxf  parametric_constraints_R2010.dxf  parametric_constraints_collinear_R2010.dxf  parametric_constraints_concentric_R2010.dxf  parametric_constraints_horizontal_R2010.dxf  parametric_constraints_parallel_R2010.dxf  parametric_constraints_perpendicular_R2010.dxf  parametric_constraints_tangent_R2010.dxf  parametric_constraints_vertical_R2010.dxf  qcad-example.dxf  qcad-example_R12.dxf
plok/: 2_boxes_subtract__test.data
po/: POTFILES  POTFILES.in  libdxf.pot
scripts/: build.sh
src/: 3dface.c  3dface.h  3dline.c  3dline.h  3dsolid.c  3dsolid.h  Makefile.am  acad_proxy_entity.c  acad_proxy_entity.h  appid.c  appid.h  arc.c  arc.h  attdef.c  attdef.h  attrib.c  attrib.h  binary_data.c  binary_data.h  binary_entity_data.c  binary_entity_data.h  binary_graphics_data.c  binary_graphics_data.h  block.c  block.h  block_record.c  block_record.h  body.c  body.h  circle.c  circle.h  class.c  class.h  color.c  color.h  comment.c  comment.h  dbg.h  dictionary.c  dictionary.h  (+153 more)
tests/: .gitignore  Makefile.am  includes.h  test_point.c  tests.c
tests/golden/: arc_R12.dxf  arc_R2004.dxf  arc_R2007.dxf  circle_R12.dxf  circle_R2010.dxf  ellipse_R12.dxf  ellipse_R2000.dxf  ellipse_R2010.dxf  helix_R2004.dxf  helix_R2010.dxf  line_R12.dxf  line_R2007.dxf  lwpolyline_rectangle_R2010.dxf  point_R12.dxf  point_R2004.dxf  polyline_rectangle_R12.dxf
