## Process this file with automake to produce Makefile.in

lib_LTLIBRARIES = \
  libdxf.la

libdxf_la_SOURCES = \
  vport.h \
  viewport.h \
  viewport.c \
  view.h \
  vertex.h \
  vertex.c \
  util.h \
  util.c \
  ucs.h \
  trace.h \
  trace.c \
  thumbnail.h \
  thumbnail.c \
  text.h \
  text.c \
  table.h \
  table.c \
  style.h \
  solid.h \
  solid.c \
  shape.h \
  shape.c \
  seqend.c \
  seqend.h \
  section.h \
  section.c \
  ray.h \
  ray.c \
  polyline.h \
  polyline.c \
  point.h \
  point.c \
  param.h \
  oleframe.h \
  oleframe.c \
  object.h \
  object.c \
  mtext.h \
  mtext.c \
  lwpolyline.h \
  lwpolyline.c \
  ltype.h \
  ltype.c \
  line.c \
  line.h \
  layer.h \
  layer.c \
  insert.h \
  insert.c \
  image.h \
  image.c \
  header.h \
  header.c \
  hatch.h \
  hatch.c \
  global.h \
  file.h \
  file.c \
  entity.h \
  entity.c \
  entities.h \
  entities.c \
  ellipse.h \
  ellipse.c \
  donut.h \
  donut.c \
  dimstyle.h \
  dimstyle.c \
  dimension.h \
  dimension.c \
  comment.c \
  color.h \
  color.c \
  class.h \
  class.c \
  circle.h \
  circle.c \
  block.h \
  block.c \
  body.h \
  body.c \
  attrib.h \
  attrib.c \
  attdef.h \
  attdef.c \
  arc.h \
  arc.c \
  appid.h \
  appid.c \
  acad_proxy_entity.h \
  acad_proxy_entity.c \
  3dsolid.h \
  3dsolid.c \
  3dface.h \
  3dface.c

libdxf_la_CFLAGS = -Wall

EXTRA_DIST= dxf.h
