## Process this file with automake to produce Makefile.in

lib_LTLIBRARIES = \
  libdxf.la

libdxf_la_SOURCES = \
  xline.h \
  xline.c \
  vport.h \
  vport.c \
  viewport.h \
  viewport.c \
  view.h \
  view.c \
  vertex.h \
  vertex.c \
  util.h \
  util.c \
  ucs.h \
  ucs.c \
  trace.h \
  trace.c \
  tolerance.h \
  tolerance.c \
  thumbnail.h \
  thumbnail.c \
  text.h \
  text.c \
  tables.h \
  tables.c \
  table.h \
  table.c \
  style.h \
  style.c \
  spline.h \
  spline.c \
  solid.h \
  solid.c \
  shape.h \
  shape.c \
  seqend.c \
  seqend.h \
  section.h \
  section.c \
  region.h \
  region.c \
  ray.h \
  ray.c \
  rastervariables.h \
  rastervariables.c \
  polyline.h \
  polyline.c \
  point.h \
  point.c \
  param.h \
  oleframe.h \
  oleframe.c \
  ole2frame.h \
  ole2frame.c \
  object_ptr.h \
  object_ptr.c \
  object.h \
  object.c \
  mtext.h \
  mtext.c \
  mlinestyle.h \
  mlinestyle.c \
  mline.h \
  mline.c \
  lwpolyline.h \
  lwpolyline.c \
  ltype.h \
  ltype.c \
  line.c \
  line.h \
  leader.c \
  leader.h \
  layer_index.h \
  layer_index.c \
  layer.h \
  layer.c \
  insert.h \
  insert.c \
  imagedef_reactor.h \
  imagedef_reactor.c \
  imagedef.h \
  imagedef.c \
  image.h \
  image.c \
  idbuffer.h \
  idbuffer.c \
  helix.h \
  helix.c \
  header.h \
  header.c \
  hatch.h \
  hatch.c \
  group.h \
  group.c \
  global.h \
  file.h \
  file.c \
  entity.h \
  entity.c \
  entities.h \
  entities.c \
  endtab.h \
  endtab.c \
  endsec.h \
  endsec.c \
  endblk.h \
  endblk.c \
  ellipse.h \
  ellipse.c \
  donut.h \
  donut.c \
  dimstyle.h \
  dimstyle.c \
  dimension.h \
  dimension.c \
  dictionaryvar.h \
  dictionaryvar.c \
  dictionary.h \
  dictionary.c \
  comment.h \
  comment.c \
  color.h \
  color.c \
  class.h \
  class.c \
  circle.h \
  circle.c \
  block_record.h \
  block_record.c \
  block.h \
  block.c \
  body.h \
  body.c \
  attrib.h \
  attrib.c \
  attdef.h \
  attdef.c \
  arc.h \
  arc.c \
  appid.h \
  appid.c \
  acad_proxy_entity.h \
  acad_proxy_entity.c \
  3dsolid.h \
  3dsolid.c \
  3dline.h \
  3dline.c \
  3dface.h \
  3dface.c

libdxf_la_CFLAGS = -Wall

EXTRA_DIST= dxf.h
