
bin_PROGRAMS = \
	tests

tests_SOURCES = \
	tests.c\
	3dface.h \
	appid.h \
	arc.h \
	attdef.h \
	attrib.h \
	block.h \
	circle.h \
	class.h \
	color.h \
	dim.h \
	ellipse.h \
	entity.h \
	eof.h \
	file.h \
	global.h \
	hatch.h \
	header.h \
	insert.h \
	layer.h \
	line.h \
	ltype.h \
	lwpolyline.h \
	object.h \
	param.h \
	point.h \
	polyline.h \
	section.h \
	seqend.h \
	shape.h \
	solid.h \
	style.h \
	table.h \
	text.h \
	thumbnail.h \
	trace.h \
	vertex.h \
	viewport.h \
	vport.h

tests_LDADD = \
	../src/libdxf.la
